# gol-tcod

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh
src/: lib.rs  main.rs  plaintext.rs
test/: glider.txt  glider_gun.txt  gray_counter.txt  grow_by_one.txt  tumbler.txt
