[package]

name = "gol_tcod"
version = "0.0.1"
authors = ["Benjamin Fox <deadalus.ai@gmail.com>"]

[dependencies]
rand = "*"

[dependencies.tcod]
git = "https://github.com/tomassedovic/tcod-rs.git"
rev = "64510dbd86388cd5667b8b92d097e722e6c28aa4"

[dependencies.gol]
git = "https://github.com/deadalusai/gol-rs.git"
rev = "1e5c390f3f285d790bf51f4a01765c5b8bc80204"