[package]
name = "gol_tcod"
version = "0.0.1"
authors = ["Benjamin Fox <deadalus.ai@gmail.com>"]

[[bin]]
name = "gol-tcod"
test = false
doc = false

[dependencies]
rand = "*"

[dependencies.tcod]
git = "https://github.com/tomassedovic/tcod-rs.git"
rev = "64510dbd86388cd5667b8b92d097e722e6c28aa4"

[dependencies.gol]
git = "https://github.com/deadalusai/gol-rs.git"
version = "0.0.2"